Added new API with Map parameter
