# src/main/resources/swagger/sanity-scan-swagger.json
@@ -122,6 +122,61 @@
 				}
 			}
 		},
+		"/user/create/mapCart": {
+			"post": {
+				"tags": [
+					"user-controller"
+				],
+				"summary": "createUserMapCart",
+				"operationId": "createUserMapCartUsingPOST",
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"*/*"
+				],
+				"parameters": [
+					{
+						"name": "mapCart",
+						"in": "query",
+						"description": "mapCart",
+						"required": true,
+						"items": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					{
+						"in": "body",
+						"name": "user",
+						"description": "user",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/User"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"201": {
+						"description": "Created"
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"403": {
+						"description": "Forbidden"
+					},
+					"404": {
+						"description": "Not Found"
+					}
+				}
+			}
+		},
 		"/user/create/password": {
 			"post": {
 				"tags": [
